<resources>
    <string name="app_name">Niramaya</string>
    <string name="home">Home</string>

    <string name="google_key">AIzaSyAfu1N06_TUQ9TV3QQrAUmVC59yd4QWZBU</string>

    <string name="find_your_location">Find your location</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="your_saved_treatment">Your Saved Treatment...!</string>
    <string name="view_your_past_prescription">View Your Past Prescription</string>
    <string name="title">Title</string>
    <string name="emoji">("\ud83d\ude05")</string>

    <string name="rupee">\u20B9</string>
    <string name="total">TOTAL</string>
    <string name="paid">PAID</string>
    <string name="due">DUE</string>
    <string name="facilities">Facilities</string>
    <string name="departments">Departments</string>
    <string name="doctors">Doctors</string>
    <string name="general_gi_laparoscopy_surgery"><![CDATA[General GI & Laparoscopy Surgery]]></string>
    <string name="joint_replacement_traumatology"><![CDATA[Joint Replacement & Traumatology]]></string>
    <string name="arthroscopy_ligament_reconstruction"><![CDATA[Arthroscopy & Ligament Reconstruction]]></string>
    <string name="cosmetic_reconstructive_surgery"><![CDATA[Cosmetic & Reconstructive Surgery]]></string>
    <string name="obstetrics_gynaec_surgery"><![CDATA[Obstetrics & Gynaec surgery]]></string>

    <string name="find_and_book"><![CDATA[Find & Book]]></string>

    <string name="make_payment">Make Payment</string>
    <string name="insurance_policy">Insurance Policy</string>
    <string name="image_insurance_policy">Image Insurance Policy</string>
    <string name="online_payment">Online Payment</string>
    <string name="image_online_payment">Image Online Payment</string>
    <string name="cash">Cash</string>
    <string name="image_cash">Image Cash</string>
    <string name="choose_your_payment_method">Choose your Payment Method</string>
    <string name="payment">Payment</string>
    <string name="image_back">Image Back</string>
    <string name="documents">Documents</string>
    <string name="upload_document">Upload Document</string>
    <string name="select_file">Select File</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload">Upload</string>
    <string name="view">View</string>
    <string name="next">Next</string>
    <string name="add_patient_details">Add Patient Details</string>
    <string name="become_a_donor">Become A Donor</string>
    <string name="every_blood_donor_is_a_live_saver">\"Every Blood donor is a Live Saver\nBE ONE.!\"</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="blood_group">Blood Group</string>
    <string name="gardian_name">Gardian Name</string>
    <string name="gardian_relationship">Gardian Relationship</string>
    <string name="gardian_contact">Gardian Contact</string>
    <string name="gardian_address">Gardian Address</string>
    <string name="referred_by_doctor_name_if_any">Referred by Doctor name if any</string>
    <string name="referred_by_doctor_name_optional">Referred by Doctor name (optional)</string>
    <string name="add_finance_detail">Finance Detail</string>

</resources>
