<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.DocumentsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/layout_bg4">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_back"
            android:padding="4sp"
            android:src="@drawable/ic_arrow_back"
            android:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/documents"
            android:textColor="@color/white"
            android:textSize="@dimen/size_20" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvView"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/layout_bg_rhl2"
            android:gravity="center"
            android:text="@string/view"
            android:textColor="@color/gray_c"
            android:textSize="@dimen/size_16" />

        <TextView
            android:id="@+id/tvUpload"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:background="@drawable/layout_bg5"
            android:gravity="center"
            android:text="@string/upload"
            android:textColor="@color/white"
            android:textSize="@dimen/size_16" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/upload_document"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/size_18" />

    <ImageView
        android:id="@+id/imgUpload"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/upload_image"
        android:src="@drawable/icf_upload" />

    <Button
        android:id="@+id/btnSelectFile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="56dp"
        android:background="@drawable/layout_bg5"
        android:text="@string/select_file"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/size_18" />

</LinearLayout>