<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_i"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvDepartments"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"/>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/txtA"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:padding="6dp"
            android:visibility="gone"
            android:text="General Physician"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txtB"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/general_gi_laparoscopy_surgery"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/txtC"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/joint_replacement_traumatology"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txtD"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/arthroscopy_ligament_reconstruction"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/txtE"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:padding="6dp"
            android:text="Endoscopic spine surgery"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txtF"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/cosmetic_reconstructive_surgery"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/txtG"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/obstetrics_gynaec_surgery"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txtH"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:padding="6dp"
            android:text="Cancer surgery"
            android:textColor="@color/black" />
    </LinearLayout>
</RelativeLayout>