<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_i"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivHospital"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/img_c" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvHospitalName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:textColor="@color/text_color_a"
                android:textSize="@dimen/size_16" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:textSize="@dimen/size_10" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/txtFacilities"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/layout_bg5"
            android:gravity="center"
            android:text="@string/facilities"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtDepartments"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/layout_bg14"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/departments"
            android:textColor="@color/text_color_c" />

        <TextView
            android:id="@+id/txtDoctors"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/layout_bg14"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/doctors"
            android:textColor="@color/text_color_c" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>