<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.PatientRagistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-2dp"
                android:layout_marginTop="-20dp"
                android:layout_marginRight="-2dp"
                android:adjustViewBounds="true"
                android:src="@drawable/top_back" />

            <TextView
                android:id="@+id/tvSkip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="16dp"
                android:text="Skip"
                android:textAlignment="viewEnd"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_20"
                android:layout_marginRight="@dimen/size_20"
                android:orientation="vertical"
                android:padding="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="4sp"
                    android:text="Ragister Patient"
                    android:textColor="@color/red_a"
                    android:textSize="@dimen/size_22" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgProfilePatient"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/ic_profile" />

                <EditText
                    android:id="@+id/patientName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/edittext_back_b"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="Name"
                    android:inputType="textCapWords"
                    android:maxLength="50"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/patientMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/edittext_back_b"
                    android:drawablePadding="8dp"
                    android:editable="false"
                    android:gravity="center_vertical"
                    android:hint="@string/mobileNumber"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/aadharNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/edittext_back_b"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="Aadhar Number"
                    android:inputType="number"
                    android:maxLength="12"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="16sp" />


                <EditText
                    android:id="@+id/patientEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/edittext_back_b"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="E-mail"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/patientDateofBirthNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/edittext_back_b"
                    android:drawableRight="@drawable/icf_appointment2"
                    android:drawablePadding="8dp"
                    android:editable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center_vertical"
                    android:hint="@string/date_of_birth"
                    android:inputType="number"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:text="Select Blood Group"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/edittext_back_b"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <Spinner
                        android:id="@+id/spinnerBloodGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"></Spinner>
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:text="Patient Address"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/patienthouseNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/edittext_back_b"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="House Number"
                    android:inputType="text"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/patientSTreet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/edittext_back_b"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="Street"
                    android:inputType="text"
                    android:maxLength="50"
                    android:padding="10dp"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/patientCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/edittext_back_b"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="City"
                    android:inputType="text"
                    android:maxLength="30"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/patientState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/edittext_back_b"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="State"
                    android:inputType="text"
                    android:maxLength="40"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/patientCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/edittext_back_b"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="Country"
                    android:inputType="text"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/patientZipCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/edittext_back_b"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="Zip Code"
                    android:inputType="number"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="16sp" />


                <EditText
                    android:id="@+id/patientGardian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/edittext_back_b"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/gardian_name"
                    android:inputType="text"
                    android:maxLength="50"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/patientRelation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/edittext_back_b"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/gardian_relationship"
                    android:inputType="text"
                    android:maxLength="20"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/patientGardianContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/edittext_back_b"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/gardian_contact"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/patientGardianAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/edittext_back_b"
                    android:gravity="start"
                    android:hint="@string/gardian_address"
                    android:inputType="textMultiLine"
                    android:maxLength="80"
                    android:maxLines="5"
                    android:minLines="3"
                    android:padding="6dp"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:text="Patient Relationship Status"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/edittext_back_b"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <Spinner
                        android:id="@+id/spinnerRelationship"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"></Spinner>
                </RelativeLayout>

                <Button
                    android:id="@+id/ragisterPatient"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="@dimen/size_8"
                    android:background="@drawable/buttun_back_green"
                    android:paddingLeft="80sp"
                    android:paddingRight="80sp"
                    android:text="REGISTER"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>